// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider borderColor prop sets borderColor 1`] = `
.c0 {
  margin-left: 0px;
  margin-right: 0px;
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-color: accent;
}

<hr
  className="c0"
/>
`;

exports[`Divider renders 1`] = `
.c0 {
  margin-left: 0px;
  margin-right: 0px;
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-color: smoke;
}

<hr
  className="c0"
/>
`;
